2007-12-22  Badlop  <badlop@process-one.net>

	* src/mod_caps.erl: Bugfix in timeout checking. Check for timeout
	when an error response is received, and also before querying

2007-12-21  Badlop  <badlop@process-one.net>

	* src/ejabberd_ctl.erl: Added new command: mnesia (thanks to
	Tsukasa Hamano)

2007-12-21  Mickael Remond  <mremond@process-one.net>

	* src/msgs/fr.msg: Updated French translation (EJAB-295)

2007-12-21  Christophe Romain <christophe.romain@process-one.net>

	* src/mod_pubsub/mod_pubsub.erl: disco#items bugfix (EJAB-465)

2007-12-21  Badlop  <badlop@process-one.net>

	* src/msgs/uk.msg: Updated (thanks to Ruslan Rakhmanin)

	* src/msgs/de.msg: Updated (thanks to Nikolaus Polak and Cord
	Beermann)

	* contrib/extract_translations/prepare-translation.sh: Small fix

2007-12-20  Badlop  <badlop@process-one.net>

	* src/mod_caps.erl: Don't include the Node attribute from C
	element in the disco#info query

2007-12-20  Christophe Romain <christophe.romain@process-one.net>

	* doc/guide.tex: Explain how to launch installer and improve
	ejabberdctl usage example (EJAB-420)
	* doc/guide.html: Likewise

	* src/mod_pubsub/mod_pubsub.erl: PEP notification bugfix

	* src/odbc/odbc_queries.erl: User count performance improvements
	(EJAB-239)

2007-12-20  Badlop  <badlop@process-one.net>

	* src/msgs/zh.msg: Small update (thanks to Shelley Shyan)

	* src/msgs/ru.msg: Small update (thanks to Konstantin Khomoutov)

2007-12-19  Badlop  <badlop@process-one.net>

	* src/msgs/pl.msg: Updated (thanks to Andrzej Smyk)(EJAB-463)

	* src/msgs/de.msg: Updated (thanks to Cord Beermann)

	* src/msgs/es.msg: Small update (thanks to Badlop)

	* src/msgs/cs.msg: Small update (thanks to Lukas Polivka alias
	Spike411)

	* src/web/ejabberd_web_admin.erl: No need to translate copyright
	notice

2007-12-18  Badlop  <badlop@process-one.net>

	* src/mod_muc/mod_muc_log.erl: Add handling of kicks 321, 322, 332

	* doc/guide.tex: Document mod_privacy_odbc
	